<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistroOcorrenciaSucessoActivity" >

    <TextView
        android:id="@+id/mensagemSucessoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagemSucessoLabel" />

    <TextView
        android:id="@+id/complementoFotoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/complementoFotoLabel" />

    <ImageView
        android:id="@+id/fotoOcorrenciaImageView"
        android:layout_width="172dp"
        android:layout_height="214dp"
        android:src="@drawable/zelador" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/voltarInicioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltarInicioButtonLabel" />

        <Button
            android:id="@+id/tirarFotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tirarFotoButtonLabel" />

        <Button
            android:id="@+id/enviarFotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviarFotoButtonLabel" />

    </LinearLayout>

</LinearLayout>
