<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/fotoOcorrenciaImageView"
        android:layout_width="100dp"
        android:layout_height="149dp"
        android:contentDescription="@string/zeladorImageDescription"
        android:src="@drawable/zelador" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/registrarOcorrenciasButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarOcorrenciasButtonLabel" />

        <Button
            android:id="@+id/verSituacaoAtualButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verSituacaoAtualButtonLabel" />

        <Button
            android:id="@+id/listaMinhasOcorrenciasButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minhas_ocorrencias_button_label"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>