<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
       
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".RegistroOcorrenciaActivity" >

        <TextView
            android:id="@+id/categoriaOcorrenciaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoriasOcorrenciasLabel" />

        <Spinner
            android:id="@+id/categoriasDasOcorrenciasSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/categoriasOcorrenciasStringArray" />

        <TextView
            android:id="@+id/detalhamentoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhamentoOcorrenciaLabel" />

        <EditText
            android:id="@+id/detalhamentoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="5" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/nomeDenuncianteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeDenuncianteLabel" />

        <EditText
            android:id="@+id/nomeDenuncianteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/gravidadeOcorrenciaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravidadeOcorrenciaLabel" />

        <SeekBar
            android:id="@+id/gravidadeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cancelarOcorrenciaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelarLabel" />

            <Button
                android:id="@+id/registrarOcorrenciaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarLabel" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>